[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI/Mechpin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/MechWindow.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/Mechanism.gd" type="Script" id=3]
[ext_resource path="res://Font/FFFFORWA.TTF" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.227451, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="Mechanism" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.707092
margin_top = -0.707108
margin_right = 0.707031
margin_bottom = -0.707092
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MechWindow" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.5
margin_top = -137.0
margin_right = 218.5
margin_bottom = 137.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectMode" type="ColorRect" parent="MechWindow"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.811765, 1, 0.258824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionStarted" type="ColorRect" parent="MechWindow"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.921569, 1, 0, 0.258824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pins" type="Control" parent="MechWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mechpin" parent="MechWindow/Pins" instance=ExtResource( 1 )]
margin_left = -117.621
margin_top = -45.5586
margin_right = -108.361
margin_bottom = -27.5586

[node name="Mechpin2" parent="MechWindow/Pins" instance=ExtResource( 1 )]
margin_left = -96.5982
margin_top = 6.15649
margin_right = -87.3382
margin_bottom = 24.1565

[node name="Mechpin3" parent="MechWindow/Pins" instance=ExtResource( 1 )]
margin_left = 10.941
margin_top = 55.5965
margin_right = 20.201
margin_bottom = 73.5965
pin_type = 3

[node name="Mechpin4" parent="MechWindow/Pins" instance=ExtResource( 1 )]
margin_left = 42.9907
margin_top = -54.3881
margin_right = 52.2507
margin_bottom = -36.3881
pin_type = 0

[node name="Mechpin5" parent="MechWindow/Pins" instance=ExtResource( 1 )]
anchor_left = 0.411
anchor_top = 0.353
anchor_right = 0.411
anchor_bottom = 0.353
margin_left = 125.19
margin_top = 62.4115
margin_right = 143.19
margin_bottom = 80.4115
pin_type = 2

[node name="Mechpin6" parent="MechWindow/Pins" instance=ExtResource( 1 )]
anchor_left = 0.411
anchor_top = 0.353
anchor_right = 0.411
anchor_bottom = 0.353
margin_left = 141.208
margin_top = 27.7057
margin_right = 159.208
margin_bottom = 45.7057
pin_type = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MechWindow"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ConnectButton" type="CheckBox" parent="MechWindow/VBoxContainer"]
margin_right = 98.0
margin_bottom = 24.0
rect_clip_content = true
text = "Wire Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trigger" type="Button" parent="MechWindow/VBoxContainer"]
margin_top = 28.0
margin_right = 98.0
margin_bottom = 48.0
text = "Trigger"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="MechWindow"]
visible = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.5
margin_top = -58.0
margin_right = 73.5
margin_bottom = -28.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MechWindow/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.11641, 0.796408 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MechWindow/PopupPanel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5166
margin_top = -8.94116
margin_right = 92.4834
margin_bottom = 38.0588
rect_scale = Vector2( 0.378326, 0.378326 )
custom_fonts/font = SubResource( 3 )
text = "Not a valid
connection"
align = 1
valign = 1

[node name="Wires" type="Node2D" parent="MechWindow"]
position = Vector2( -294.207, -162.293 )
[connection signal="toggled" from="MechWindow/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_toggled"]
[connection signal="button_up" from="MechWindow/VBoxContainer/Trigger" to="." method="_on_Trigger_button_up"]
